# libcosmic

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  crates.js  help.html  i18n.toml  justfile  settings.html  src-files.js  text.sh
.zed/: settings.json
ab_glyph/: all.html  enum.GlyphImageFormat.html  enum.OutlineCurve.html  fn.point.html  index.html  struct.CodepointIdIter.html  struct.FontArc.html  struct.FontRef.html  struct.FontVec.html  struct.Glyph.html  struct.GlyphId.html  struct.GlyphImage.html  struct.GlyphSvg.html  struct.InvalidFont.html  struct.Outline.html  struct.OutlinedGlyph.html  struct.Point.html  struct.PxScale.html  struct.PxScaleFactor.html  struct.PxScaleFont.html  struct.Rect.html  struct.VariationAxis.html  trait.Font.html  trait.ScaleFont.html  trait.VariableFont.html
ab_glyph_rasterizer/: all.html  fn.point.html  index.html  struct.Point.html  struct.Rasterizer.html
accesskit/: all.html  enum.Action.html  enum.ActionData.html  enum.AriaCurrent.html  enum.AutoComplete.html  enum.DefaultActionVerb.html  enum.HasPopup.html  enum.Invalid.html  enum.ListStyle.html  enum.Live.html  enum.Orientation.html  enum.Role.html  enum.SortDirection.html  enum.TextAlign.html  enum.TextDecoration.html  enum.TextDirection.html  enum.Toggled.html  enum.VerticalOffset.html  index.html  struct.ActionRequest.html  struct.Affine.html  struct.CustomAction.html  struct.Node.html  struct.NodeBuilder.html  struct.NodeId.html  struct.Point.html  struct.Rect.html  struct.Size.html  struct.TextPosition.html  struct.TextSelection.html  struct.Tree.html  struct.TreeUpdate.html  struct.Vec2.html  trait.ActionHandler.html  trait.ActivationHandler.html  trait.DeactivationHandler.html  type.NodeIdContent.html
accesskit_atspi_common/: all.html  enum.CoordType.html  enum.Error.html  enum.Event.html  enum.Granularity.html  enum.Layer.html  enum.NodeIdOrRoot.html  enum.ObjectEvent.html  enum.Property.html  enum.Role.html  enum.ScrollType.html  enum.State.html  enum.WindowEvent.html  fn.next_adapter_id.html  index.html  struct.Action.html  struct.ActionHandlerWrapper.html  struct.Adapter.html  struct.AppContext.html  struct.InterfaceSet.html  struct.PlatformNode.html  struct.PlatformRoot.html  struct.Rect.html  struct.StateSet.html  struct.WindowBounds.html  trait.ActionHandlerNoMut.html  trait.AdapterCallback.html  type.Result.html
accesskit_consumer/: all.html  enum.FilterResult.html  enum.TextAttributeValue.html  fn.common_filter.html  fn.common_filter_with_root_exception.html  index.html  struct.Node.html  struct.TextPosition.html  struct.TextRange.html  struct.Tree.html  (+3 more)
cosmic-config/: Cargo.toml
cosmic-config/examples/: app.rs
cosmic-config/src/: calloop.rs  dbus.rs  lib.rs  setting.rs  subscription.rs
cosmic-theme/: Cargo.toml
cosmic-theme/src/: composite.rs  hex_color.rs  image.rs  lib.rs  steps.rs  util.rs
cosmic-theme/src/color_picker/: exact.rs  mod.rs
cosmic-theme/src/config/: mod.rs
cosmic-theme/src/model/: color.rs  constraint.rs  corner.rs  cosmic_palette.rs  dark.ron  density.rs  derivation.rs  layout.rs  light.ron  mod.rs  mode.rs  selection.rs  spacing.rs  theme.rs
cosmic-theme/src/output/: gtk4_output.rs  mod.rs  qt56ct_output.rs  qt_output.rs  vs_code.rs
cosmic-theme/src/output/snapshots/: cosmic_theme__output__qt56ct_output__tests__dark_default_qpalette.snap  cosmic_theme__output__qt56ct_output__tests__light_default_qpalette.snap  cosmic_theme__output__qt_output__tests__dark_default_kcolorscheme.snap  cosmic_theme__output__qt_output__tests__light_default_kcolorscheme.snap
crates/component-system/: Cargo.toml  README.md
crates/component-system/examples/basic/: main.rs
crates/component-system/examples/basic/components/: app.rs  info_button.rs  mod.rs
crates/component-system/src/: app_runner.rs  component.rs  handle.rs  lib.rs  macros.rs
crates/component-system/src/component/: elmless.rs  elmlike.rs  mod.rs
examples/about/: Cargo.toml
examples/about/src/: main.rs
examples/applet/: Cargo.toml
examples/applet/src/: main.rs  window.rs
examples/application/: Cargo.toml
examples/application/src/: main.rs  notif.rs
examples/calendar/: Cargo.toml
examples/calendar/src/: main.rs
examples/context-menu/: Cargo.toml
examples/context-menu/src/: main.rs
examples/cosmic/: Cargo.toml  README.md  main.rs  window.rs
examples/cosmic-applet-graphics/: Cargo.toml
examples/cosmic-applet-graphics/data/: com.system76.CosmicAppletGraphics.desktop
examples/cosmic-applet-graphics/data/resources/: resources.gresource.xml
examples/cosmic-applet-graphics/src/: dbus.rs  graphics.rs  main.rs  window.rs
examples/cosmic-sctk/: Cargo.toml  README.md
examples/cosmic-sctk/src/: main.rs  window.rs
examples/cosmic/src/: main.rs  window.rs
examples/cosmic/src/window/: bluetooth.rs  demo.rs  desktop.rs  editor.rs  networking.rs  system_and_accounts.rs
examples/cosmic/window/: bluetooth.rs  editor.rs  input_devices.rs  system_and_accounts.rs  time_and_language.rs
examples/design-demo/: Cargo.toml  justfile
examples/design-demo/resources/: com.system76.CosmicDesignDemo.desktop
examples/design-demo/src/: buttons.rs  cards.rs  debug.rs  inputs.rs  main.rs  typography.rs
examples/multi-window/: Cargo.toml
examples/multi-window/src/: main.rs  window.rs
examples/open-dialog/: Cargo.toml
examples/open-dialog/src/: main.rs
examples/spin-button/: Cargo.toml
examples/spin-button/src/: main.rs
examples/table-view/: Cargo.toml
examples/table-view/src/: main.rs
examples/text/: Cargo.toml  README.md
examples/text/res/: arabic.txt  bidi.txt  fallback.txt  farsi.txt  hebrew.txt
examples/text/src/: buffer.rs  lib.rs  main.rs
examples/text/src/font/: cache.rs  layout.rs  matches.rs  mod.rs  shape.rs  system.rs
examples/text/src/font/fallback/: macos.rs  mod.rs  unix.rs  windows.rs
gtk4/: Cargo.toml
gtk4/src/: lib.rs  wayland.rs  wayland_custom_surface.rs  x.rs
gtk4/widgets/src/labeled_item/: imp.rs
widgets/: Cargo.toml
widgets/src/: labeled_item.rs  lib.rs
widgets/src/labeled_item/: imp.rs  mod.rs
(+108023 files in other folders)
