[package]
name = "cosmic-config"
version = "0.1.0"
edition = "2021"

[features]
default = ["macro", "subscription"]
dbus = ["dep:zbus", "cosmic-settings-daemon", "futures-util", "subscription"]
macro = ["cosmic-config-derive"]
subscription = ["iced_futures"]

[dependencies]
cosmic-settings-daemon = { git = "https://github.com/pop-os/dbus-settings-bindings", optional = true }
zbus = { version = "5.7.1", default-features = false, optional = true }
atomicwrites = { git = "https://github.com/jackpot51/rust-atomicwrites" }
calloop = { version = "0.14.2", optional = true }
notify = "8.0.0"
ron = "0.9.0"
serde = "1.0.219"
cosmic-config-derive = { path = "../cosmic-config-derive/", optional = true }
iced = { path = "../iced/", default-features = false, optional = true }
iced_futures = { path = "../iced/futures/", default-features = false, optional = true }
once_cell = "1.21.1"
futures-util = { version = "0.3", optional = true }
dirs.workspace = true
tokio = { version = "1.44", optional = true, features = ["time"] }
async-std = { version = "1.13", optional = true }
tracing = "0.1"
notify-debouncer-full = "0.5.0"

[target.'cfg(unix)'.dependencies]
xdg = "2.5"

[target.'cfg(windows)'.dependencies]
known-folders = "1.2.0"
