[package]
name = "cosmic-config"
version = "0.1.0"
edition = "2024"

[features]
default = ["macro", "subscription"]
dbus = ["dep:zbus", "cosmic-settings-daemon", "futures-util", "subscription"]
macro = ["cosmic-config-derive"]
subscription = ["iced_futures"]

[dependencies]
cosmic-settings-daemon = { git = "https://github.com/pop-os/dbus-settings-bindings", optional = true }
zbus = { version = "5.11.0", default-features = false, optional = true }
atomicwrites = { git = "https://github.com/jackpot51/rust-atomicwrites" }
calloop = { version = "0.14.3", optional = true }
notify = "8.2.0"
ron = "0.11.0"
serde = "1.0.219"
cosmic-config-derive = { path = "../cosmic-config-derive/", optional = true }
iced = { path = "../iced/", default-features = false, optional = true }
iced_futures = { path = "../iced/futures/", default-features = false, optional = true }
futures-util = { version = "0.3", optional = true }
dirs.workspace = true
tokio = { version = "1.47", optional = true, features = ["time"] }
async-std = { version = "1.13", optional = true }
tracing = "0.1"

[target.'cfg(unix)'.dependencies]
xdg = "3.0"

[target.'cfg(windows)'.dependencies]
known-folders = "1.3.1"
