[package]
name = "cosmic-theme"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
features = ["test_all_features"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["export"]
export = ["serde_json"]
no-default = []

[dependencies]
palette = { version = "0.7.6", features = ["serializing"] }
almost = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", optional = true, features = [
    "preserve_order",
] }
ron = "0.12.0"
csscolorparser = { version = "0.8.1", features = ["serde"] }
cosmic-config = { path = "../cosmic-config/", default-features = false, features = [
    "subscription",
    "macro",
] }
configparser = "3.1.0"
dirs.workspace = true
thiserror = "2.0.18"
