[package]
name = "cosmic-theme"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
features = ["test_all_features"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["export"]
export = ["serde_json"]
no-default = []

[dependencies]
palette = { workspace = true, features = ["serializing"] }
almost = "0.2"
serde = { workspace = true, features = ["derive"] }
serde_json = { version = "1.0.149", optional = true, features = [
    "preserve_order",
] }
ron.workspace = true
csscolorparser = { version = "0.8.3", features = ["serde"] }
cosmic-config = { path = "../cosmic-config/", default-features = false, features = [
    "subscription",
    "macro",
] }
configparser = "3.1.0"
dirs.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta = "1.47.2"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
