[package]
name = "libcosmic-widgets"
version = "0.1.0"
edition = "2021"

[dependencies]
relm4 = { git = "https://github.com/AaronErhardt/relm4", rev = "7404ad64ca8763f6629cadcd743947cd29e1538a" }
relm4-macros = { git = "https://github.com/AaronErhardt/relm4", branch = "new-approach" }
tracker = "0.1.1"
