[package]
name = "cosmic-component-system"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies.tokio]
version = "1.15"
features = ["rt", "rt-multi-thread", "sync"]

[dependencies.relm4]
git = "https://github.com/AaronErhardt/relm4"
branch = "new-approach"
commit = "c945e3a68fc96f95bedb286c77ec67a529e72fb6"

[dependencies.relm4-macros]
git = "https://github.com/AaronErhardt/relm4"
branch = "new-approach"
commit = "c945e3a68fc96f95bedb286c77ec67a529e72fb6"