[package]
name = "about"
version = "0.1.0"
edition = "2021"

[dependencies]
open = "5.3.2"

[dependencies.libcosmic]
path = "../../"
default-features = false
features = [
    "debug",
    "winit",
    "tokio",
    "xdg-portal",
    "dbus-config",
    "desktop",
    "a11y",
    "wayland",
    "wgpu",
    "single-instance",
    "multi-window",
    "about",
]
