[package]
name = "applet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1"
rust-embed = "8.6.0"
tracing = "0.1"
env_logger = "0.10.2"
log = "0.4.26"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
default-features = false
features = ["applet-token"]
