[package]
name = "application"
version = "0.1.0"
edition = "2021"

[features]
default = ["wayland"]
wayland = ["libcosmic/wayland"]

[dependencies]
env_logger = "0.11"

[dependencies.libcosmic]
# git = "https://github.com/pop-os/libcosmic"
# branch = "iced-rebase"
path = "../.."
features = [
    "debug",
    "winit",
    "tokio",
    "xdg-portal",
    "a11y",
    "wgpu",
    "single-instance",
    "surface-message",
    "multi-window",
]
