[package]
name = "context-menu"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-log = "0.2.0"

[dependencies.libcosmic]
path = "../../"
features = [
    "debug",
    "winit",
    "wgpu",
    "tokio",
    "xdg-portal",
    "surface-message",
    "wayland",
]
