[package]
name = "cosmic_sctk"
version = "0.1.0"
authors = []
edition = "2021"
publish = false

[dependencies]
libcosmic = { path = "../..", default-features = false, features = ["wayland", "tokio"] }
cosmic-time = { git = "https://github.com/pop-os/cosmic-time", rev="6f3ff1aa", default-features = false, features = ["libcosmic", "once_cell"] }
