[package]
name = "cosmic"
version = "0.1.0"
authors = []
edition = "2021"
publish = false

[dependencies]
apply = "0.3.0"
fraction = "0.15.3"
libcosmic = { path = "../..", features = [
    "debug",
    "winit",
    "tokio",
    "single-instance",
    "dbus-config",
    "a11y",
    "wgpu",
    "xdg-portal",
] }
once_cell = "1.21"
slotmap = "1.0.7"
env_logger = "0.10"
log = "0.4.26"

[dependencies.cosmic-time]
git = "https://github.com/pop-os/cosmic-time"
default-features = false
features = ["once_cell"]
