[package]
name = "cosmic-design-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
fraction = "0.13.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dependencies.libcosmic]
path = "../../"
default-features = false
features = ["debug", "winit", "tokio"]

[dependencies.cosmic-time]
git = "https://github.com/pop-os/cosmic-time"
branch = "icon-color"
default-features = false
features = ["libcosmic", "once_cell"]
