[package]
name = "open-dialog"
version = "0.1.0"
edition = "2021"

[features]
default = ["xdg-portal"]
rfd = ["libcosmic/rfd"]
xdg-portal = ["libcosmic/xdg-portal"]

[dependencies]
apply = "0.3.0"
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"

[dependencies.libcosmic]
features = ["debug", "winit", "multi-window", "wayland", "tokio"]
path = "../../"
default-features = false
