[package]
name = "text"
version = "0.1.0"
authors = []
edition = "2021"
publish = false

[dependencies]
ab_glyph = { version = "0.2", optional = true }
orbclient = "0.3"
rusttype = { version = "0.9", optional = true }
rustybuzz = "0.5"
swash = { version = "0.1", optional = true }
unicode-bidi = "0.3"
unicode-linebreak = "0.1"
unicode-script = "0.5"

[features]
default = ["ab_glyph"]
mono = []
